--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
       -
         name: Set up Go
         uses: actions/setup-go@v1
+      - name: Get Deps
+        run: go get -v 
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v1
