--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,5 @@ deploy:
 # Windows doesn't work yet, due to the readonly segment
 #    - "release/powerline-go-windows-amd64"
   skip_cleanup: true
+  on:
+    tags: true
