--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ before_deploy:
   - mkdir -p release
   - "GOOS=linux  GOARCH=amd64 go build -o release/shelby-linux-amd64"
   - "GOOS=darwin GOARCH=amd64 go build -o release/shelby-darwin-amd64"
-# Windows doesn't work yet, due to the readonly segment
-#  - "GOOS=windows GOARCH=amd64 go build -o release/powerline-go-windows-amd64"
+  - "tar -cvzf shelby-darwin-amd64.tar.gz shelby-darwin-amd64"
+  - "tar -cvzf shelby-linux-amd64.tar.gz shelby-darwin-amd64"
 
 deploy:
   provider: releases
@@ -21,8 +21,8 @@ deploy:
   file:
     - "release/shelby-linux-amd64"
     - "release/shelby-darwin-amd64"
-# Windows doesn't work yet, due to the readonly segment
-#    - "release/powerline-go-windows-amd64"
+    - "release/shelby-darwin-amd64.tar.gz"
+    - "release/shelby-linux-amd64.tar.gz"
   skip_cleanup: true
   on:
     tags: true
