--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ deploy:
   on:
     tags: true
 after_script:
-  - curl -X POST https://api.telegram.org/bot$TELEGRAM_TOKEN/sendMessage -d chat_id=$TELEGRAM_CHAT_ID -d "text=*Travis* Build Succeded"
+  - bash ./scripts/telegram_notification.sh
