--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,6 @@ deploy:
   on:
     tags: true
 after_script:
-  - tg_notifier.sh > curl https://raw.githubusercontent.com/athul/autom/master/tg_notification.sh
+  - curl https://raw.githubusercontent.com/athul/autom/master/tg_notification.sh > tg_notifier.sh
   - bash tg_notifier.sh
 
