--- a/.github/workflows/star.yml
+++ b/.github/workflows/star.yml
@@ -15,4 +15,5 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.chat}}
           TELEGRAM_TOKEN: ${{secrets.token }}
           INPUT_STATUS: ${{ job.status }}
+          STARGAZERS: ${{ github.event.repository.stargazers_count }}
         run: sh -c "$(curl -sL https://raw.githubusercontent.com/athul/autom/master/tg_gh_star.sh)"
