--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -17,4 +17,5 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.chat}}
           TELEGRAM_TOKEN: ${{secrets.token }}
           INPUT_STATUS: ${{ job.status }}
+          STARGAZERS: ${{ github.event.repository.stargazers_count }}
         run: sh -c "$(curl -sL https://raw.githubusercontent.com/athul/autom/master/tg_gh_action_noti.sh)"
