--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,8 +19,10 @@ jobs:
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
-        git submodule update --init # get libgit2
-        make install-static
+        if [ -f Gopkg.toml ]; then
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            dep ensure
+        fi
 
     - name: Build
       run: |
