--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: Statusoli
-        uses: athul/statusoli@master
+        uses: athul/telewire@js
         if: always()
         with:
           chat: ${{ secrets.chat }}
