--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,37 +1,33 @@
-name: Go Build
-on: 
+name: Go Release
+on:
   push:
-    branches:
-      - master
-jobs:
+    tags:
+      - "*"
+  workflow_dispatch:
 
-  build:
-    name: Build
+permissions:
+  contents: write
+jobs:
+  goreleaser:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Go 1.16
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16
+        id: go
 
-    - name: Set up Go 1.13
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.16
-      id: go
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
-
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
-
-    - name: Build
-      run: |
-        go build -ldflags="-s -w"
-        ls
-    - uses: actions/upload-artifact@v1
-      with:
-        name: Shelby Binary
-        path: shelby
+      - name: Run Goreleaser
+        uses: goreleaser/goreleaser-action@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          distribution: goreleaser
+          version: latest
+          args: release --rm-dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
