--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,3 +31,4 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          HB_TOKEN: ${{ secrets. HB_TOKEN}}
